fix collapse animation in navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,6 +154,15 @@ p {
   transition: background-size 0.3s ease;
 }
 
+.collapsing {
+  transform: translateY(-300px);
+}
+
+.collapsed {
+  transition: all 0.5s ease;
+  height: auto;
+}
+
 @media only screen and (min-width: 768px) {
   .showcase-container {
     display: flex;
